<resources>
    <string name="app_name">Universal Vine Aid System</string>

    <string name="action_settings">Definições de Alertas</string>
    <string name="action_login">Iniciar Sessão Online</string>
    <string name="action_help">Ajuda</string>
    <string name="action_logout">Terminar Sessão</string>
    <string name="title_activity_maps">Map</string>
    <string name="lbl_btnZona1">Zona 1</string>
    <string name="lbl_btnZona2">Zona 2</string>
    <string name="lbl_btnZona3">Zona 3</string>
    <string name="lbl_btnHum">Humidade</string>
    <string name="lbl_btnTemp">Temperatura</string>
    <string name="lbl_btnSol">Luminosidade</string>
    <string name="lbl_btnChuva">Pluviosidade</string>
    <string name="lbl_btnGPS">GPS</string>
    <string name="lbl_zonaAtual">Zona atual: </string>
    <string name="title_activity_settings">Definições de Alertas</string>
    <string name="lbl_ativarAlertas">> Activar/desactivar a recepção de Alertas</string>
    <string name="lbl_parametrosAlertas">> Seleccione o intervalo de valores que considera ideais:</string>
    <string name="lbl_settingsTemperatura">1. Temperatura</string>
    <string name="lbl_settingsHumidade">2. Humidade do Ar</string>
    <string name="lbl_settingsSol">3. Exposição Solar</string>
    <string name="title_activity_start">StartActivity</string>


    <string name="lbl_entrarButton">Entrar</string>
    <string name="lbl_loginButton">Iniciar Sessão Online</string>
    <string name="lbl_btnaplicarsettings">Aplicar</string>
    <string name="lbl_valoresSensores">Últimos dados recebidos:</string>

    <string name="alertDialogOk">OK</string>
    <string name="alertDialogCancel">Cancelar</string>
    <string name="title_activity_db_save_info">dbSaveInfoActivity</string>
    <string name="title_activity_db_save_alerta">dbSaveAlertaActivity</string>
    <string name="title_activity_login">Iniciar Sessão Online</string>

</resources>
