<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_alignParentLeft="true">

    <item
        android:id="@+id/action_scan"
        android:title="BLE"
        app:showAsAction="always|withText"
        android:icon="@mipmap/ic_ble"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@mipmap/ic_settings"
        android:showAsAction="never|withText"/>

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:icon="@mipmap/ic_help"
        android:showAsAction="never|withText"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:icon="@mipmap/ic_logout"
        android:showAsAction="never|withText"/>

</menu>
