<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@color/tabBackgroundColor"
    android:orientation="vertical"
    android:id="@+id/fragment2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.85"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/alertListView"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="bottom">

        <Button
            android:id="@+id/btnZona1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.18"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_zonabutton"
            android:text="@string/lbl_btnZona1" />

        <Button
            android:id="@+id/btnZona2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.18"
            android:background="@drawable/bg_zonabutton"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lbl_btnZona2" />

        <Button
            android:id="@+id/btnZona3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.18"
            android:background="@drawable/bg_zonabutton"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lbl_btnZona3"  />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lbl_zonaEscolhida"
            android:id="@+id/txtZonaEscolhida"
            android:layout_weight="0.16"
            android:gravity="right" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txtZonaAtual"
            android:gravity="left"
            android:textColor="@color/colorPrimaryText" />
    </LinearLayout>

</LinearLayout>