<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tabBackgroundColor"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:id="@+id/fragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.90"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/btnSatellite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAlignBottom="false"
                android:clickable="false"
                android:src="@mipmap/ic_satellite"
                android:layout_marginTop="5dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/bg_mapbutton" />

            <Button
                android:id="@+id/btnZoomIn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="+"
                android:textColor="#737373"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/bg_mapbutton" />

            <Button
                android:id="@+id/btnZoomOut"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="-"
                android:textColor="#737373"
                android:textSize="25dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="3dp"
                android:background="@drawable/bg_mapbutton" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/map"
            android:layout_width="270dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/map_border">
        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginLeft="12.5dp"
            android:layout_marginRight="7.5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lbl_valoresSensores"
                android:id="@+id/txtValoresSensores"
                android:textSize="12sp"
                android:foregroundGravity="top"
                android:layout_alignParentTop="true"
                android:layout_alignEnd="@+id/sensorListView"
                android:gravity="right"
                android:layout_marginRight="5dp" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sensorListView"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/txtValoresSensores"
                android:foregroundGravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnZona1"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.18"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/bg_zonabutton"
            android:text="@string/lbl_btnZona1" />

        <Button
            android:id="@+id/btnZona2"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.18"
            android:background="@drawable/bg_zonabutton"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lbl_btnZona2" />

        <Button
            android:id="@+id/btnZona3"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="0.18"
            android:background="@drawable/bg_zonabutton"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/lbl_btnZona3" />

        <TextView
            android:id="@+id/txtZonaEscolhida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:gravity="right"
            android:text="@string/lbl_zonaEscolhida"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txtZonaAtual"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorPrimaryText" />
    </LinearLayout>

</LinearLayout>