<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/primaryColor"
        android:minHeight="?attr/actionBarSize"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:theme="@style/AppTheme"
        app:popupTheme="@style/SettingsTheme" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/tabBackgroundColor"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="39dp"
            android:weightSum="1"
            android:layout_weight="0.09">

            <TextView
                android:layout_width="299dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_ativarAlertas"
                android:id="@+id/txtAtivarAlertas"
                android:gravity="left|center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.60" />

            <Switch
                android:layout_width="73dp"
                android:layout_height="match_parent"
                android:id="@+id/switch1"
                android:checked="true"
                android:layout_weight="0.20" />

            <TextView
                android:layout_width="19dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="on"
                android:id="@+id/textView8"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.19" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="39dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_parametrosAlertas"
                android:id="@+id/textView2"
                android:gravity="left|bottom"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="55dp"
            android:paddingTop="5dp"
            android:paddingRight="55dp"

            android:weightSum="1"
            android:id="@+id/lnlTemperatura">

            <TextView
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_settingsTemperatura"
                android:id="@+id/txtTemperatura"
                android:gravity="left|center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.02" />

            <EditText
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtTemperaturaMin"
                android:hint="Mín"
                android:gravity="center" />

            <TextView
                android:layout_width="19dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="a"
                android:id="@+id/txtView"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.01" />

            <EditText
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtTemperaturaMax"
                android:hint="Máx"
                android:gravity="center" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(ºC)"
                android:id="@+id/txtView2"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.17" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:paddingTop="5dp"
            android:weightSum="1"
            android:id="@+id/lnlHumidade" >

            <TextView
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_settingsHumidade"
                android:id="@+id/txtHumidade"
                android:gravity="left|center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.02" />
            <EditText
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtHumidadeMin"
                android:hint="Mín"
                android:gravity="center" />

            <TextView
                android:layout_width="19dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="a"
                android:id="@+id/textView4"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.01" />

            <EditText
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtHumidadeMax"
                android:hint="Máx"
                android:gravity="center" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(%)"
                android:id="@+id/textView5"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.17" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="55dp"
            android:paddingRight="55dp"
            android:paddingTop="5dp"
            android:weightSum="1"
            android:id="@+id/lnlSol" >

            <TextView
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lbl_settingsSol"
                android:id="@+id/txtSol"
                android:gravity="left|center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.02" />

            <EditText
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtSolMin"
                android:hint="Mín"
                android:gravity="center" />

            <TextView
                android:layout_width="19dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="a"
                android:id="@+id/textView6"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.01" />

            <EditText
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/edtSolMax"
                android:hint="Máx"
                android:gravity="center" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="(%)"
                android:id="@+id/textView7"
                android:gravity="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="15dp"
                android:layout_weight="0.17" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>